v0.23.0/_sources/content/tutorials/05-dcr/plot_inv_2_dcr2d.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "content/tutorials/05-dcr/plot_inv_2_dcr2d.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_content_tutorials_05-dcr_plot_inv_2_dcr2d.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_content_tutorials_05-dcr_plot_inv_2_dcr2d.py:


2.5D DC Resistivity Least-Squares Inversion
===========================================

Here we invert a line of DC resistivity data to recover an electrical
conductivity model. We formulate the inverse problem as a least-squares
optimization problem. For this tutorial, we focus on the following:

    - Defining the survey
    - Generating a mesh based on survey geometry
    - Including surface topography
    - Defining the inverse problem (data misfit, regularization, directives)
    - Applying sensitivity weighting
    - Plotting the recovered model and data misfit

.. GENERATED FROM PYTHON SOURCE LINES 20-23

Import modules
--------------


.. GENERATED FROM PYTHON SOURCE LINES 23-56

.. code-block:: Python


    import os
    import numpy as np
    import matplotlib as mpl
    import matplotlib.pyplot as plt
    from matplotlib.colors import LogNorm
    import tarfile

    from discretize import TreeMesh
    from discretize.utils import mkvc, active_from_xyz

    from simpeg.utils import model_builder
    from simpeg import (
        maps,
        data_misfit,
        regularization,
        optimization,
        inverse_problem,
        inversion,
        directives,
        utils,
    )
    from simpeg.electromagnetics.static import resistivity as dc
    from simpeg.electromagnetics.static.utils.static_utils import (
        plot_pseudosection,
    )
    from simpeg.utils.io_utils.io_utils_electromagnetics import read_dcip2d_ubc


    mpl.rcParams.update({"font.size": 16})
    # sphinx_gallery_thumbnail_number = 4









.. GENERATED FROM PYTHON SOURCE LINES 57-66

Download Assets
---------------

Here we provide the file paths to assets we need to run the inversion. The
path to the true model conductivity and chargeability models are also
provided for comparison with the inversion results. These files are stored as a
tar-file on our google cloud bucket:
"https://storage.googleapis.com/simpeg/doc-assets/dcr2d.tar.gz"


.. GENERATED FROM PYTHON SOURCE LINES 66-86

.. code-block:: Python


    # storage bucket where we have the data
    data_source = "https://storage.googleapis.com/simpeg/doc-assets/dcr2d.tar.gz"

    # download the data
    downloaded_data = utils.download(data_source, overwrite=True)

    # unzip the tarfile
    tar = tarfile.open(downloaded_data, "r")
    tar.extractall()
    tar.close()

    # path to the directory containing our data
    dir_path = downloaded_data.split(".")[0] + os.path.sep

    # files to work with
    topo_filename = dir_path + "topo_xyz.txt"
    data_filename = dir_path + "dc_data.obs"






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Downloading https://storage.googleapis.com/simpeg/doc-assets/dcr2d.tar.gz
       saved to: /home/vsts/work/1/s/tutorials/05-dcr/dcr2d.tar.gz
    Download completed!




.. GENERATED FROM PYTHON SOURCE LINES 87-95

Load Data, Define Survey and Plot
---------------------------------

Here we load the observed data, define the DC and IP survey geometry and
plot the data values using pseudo-sections.
**Warning**: In the following example, the observations file is assumed to be
sorted by sources


.. GENERATED FROM PYTHON SOURCE LINES 95-100

.. code-block:: Python


    # Load data
    topo_xyz = np.loadtxt(str(topo_filename))
    dc_data = read_dcip2d_ubc(data_filename, "volt", "general")








.. GENERATED FROM PYTHON SOURCE LINES 101-110

Plot Observed Data in Pseudo-Section
------------------------------------

Here, we demonstrate how to plot 2D data in pseudo-section.
First, we plot the actual data (voltages) in pseudo-section as a scatter plot.
This allows us to visualize the pseudo-sensitivity locations for our survey.
Next, we plot the data as apparent conductivities in pseudo-section with a filled
contour plot.


.. GENERATED FROM PYTHON SOURCE LINES 110-141

.. code-block:: Python


    # Plot voltages pseudo-section
    fig = plt.figure(figsize=(12, 5))
    ax1 = fig.add_axes([0.1, 0.15, 0.75, 0.78])
    plot_pseudosection(
        dc_data,
        plot_type="scatter",
        ax=ax1,
        scale="log",
        cbar_label="V/A",
        scatter_opts={"cmap": mpl.cm.viridis},
    )
    ax1.set_title("Normalized Voltages")
    plt.show()

    # Plot apparent conductivity pseudo-section
    fig = plt.figure(figsize=(12, 5))
    ax1 = fig.add_axes([0.1, 0.15, 0.75, 0.78])
    plot_pseudosection(
        dc_data,
        plot_type="contourf",
        ax=ax1,
        scale="log",
        data_type="apparent conductivity",
        cbar_label="S/m",
        mask_topography=True,
        contourf_opts={"levels": 20, "cmap": mpl.cm.viridis},
    )
    ax1.set_title("Apparent Conductivity")
    plt.show()




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /content/tutorials/05-dcr/images/sphx_glr_plot_inv_2_dcr2d_001.png
         :alt: Normalized Voltages
         :srcset: /content/tutorials/05-dcr/images/sphx_glr_plot_inv_2_dcr2d_001.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /content/tutorials/05-dcr/images/sphx_glr_plot_inv_2_dcr2d_002.png
         :alt: Apparent Conductivity
         :srcset: /content/tutorials/05-dcr/images/sphx_glr_plot_inv_2_dcr2d_002.png
         :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 142-150

Assign Uncertainties
--------------------

Inversion with SimPEG requires that we define the uncertainties on our data.
This represents our estimate of the standard deviation of the
noise in our data. For DC data, the uncertainties are 10% of the absolute value



.. GENERATED FROM PYTHON SOURCE LINES 150-153

.. code-block:: Python


    dc_data.standard_deviation = 0.05 * np.abs(dc_data.dobs)








.. GENERATED FROM PYTHON SOURCE LINES 154-159

Create Tree Mesh
------------------

Here, we create the Tree mesh that will be used to invert DC data.


.. GENERATED FROM PYTHON SOURCE LINES 159-201

.. code-block:: Python


    dh = 4  # base cell width
    dom_width_x = 3200.0  # domain width x
    dom_width_z = 2400.0  # domain width z
    nbcx = 2 ** int(np.round(np.log(dom_width_x / dh) / np.log(2.0)))  # num. base cells x
    nbcz = 2 ** int(np.round(np.log(dom_width_z / dh) / np.log(2.0)))  # num. base cells z

    # Define the base mesh
    hx = [(dh, nbcx)]
    hz = [(dh, nbcz)]
    mesh = TreeMesh([hx, hz], x0="CN")

    # Mesh refinement based on topography
    mesh.refine_surface(
        topo_xyz[:, [0, 2]],
        padding_cells_by_level=[0, 0, 4, 4],
        finalize=False,
    )

    # Mesh refinement near transmitters and receivers. First we need to obtain the
    # set of unique electrode locations.
    electrode_locations = np.c_[
        dc_data.survey.locations_a,
        dc_data.survey.locations_b,
        dc_data.survey.locations_m,
        dc_data.survey.locations_n,
    ]

    unique_locations = np.unique(
        np.reshape(electrode_locations, (4 * dc_data.survey.nD, 2)), axis=0
    )

    mesh.refine_points(unique_locations, padding_cells_by_level=[4, 4], finalize=False)

    # Refine core mesh region
    xp, zp = np.meshgrid([-600.0, 600.0], [-400.0, 0.0])
    xyz = np.c_[mkvc(xp), mkvc(zp)]
    mesh.refine_bounding_box(xyz, padding_cells_by_level=[0, 0, 2, 8], finalize=False)

    mesh.finalize()









.. GENERATED FROM PYTHON SOURCE LINES 202-210

Project Surveys to Discretized Topography
-----------------------------------------

It is important that electrodes are not model as being in the air. Even if the
electrodes are properly located along surface topography, they may lie above
the discretized topography. This step is carried out to ensure all electrodes
like on the discretized surface.


.. GENERATED FROM PYTHON SOURCE LINES 210-230

.. code-block:: Python


    # Create 2D topography. Since our 3D topography only changes in the x direction,
    # it is easy to define the 2D topography projected along the survey line. For
    # arbitrary topography and for an arbitrary survey orientation, the user must
    # define the 2D topography along the survey line.
    topo_2d = np.unique(topo_xyz[:, [0, 2]], axis=0)

    # Find cells that lie below surface topography
    ind_active = active_from_xyz(mesh, topo_2d)

    # Extract survey from data object
    survey = dc_data.survey

    # Shift electrodes to the surface of discretized topography
    survey.drape_electrodes_on_topography(mesh, ind_active, option="top")

    # Reset survey in data object
    dc_data.survey = survey









.. GENERATED FROM PYTHON SOURCE LINES 231-239

Starting/Reference Model and Mapping on Tree Mesh
---------------------------------------------------

Here, we would create starting and/or reference models for the DC inversion as
well as the mapping from the model space to the active cells. Starting and
reference models can be a constant background value or contain a-priori
structures. Here, the starting model is the natural log of 0.01 S/m.


.. GENERATED FROM PYTHON SOURCE LINES 239-252

.. code-block:: Python


    # Define conductivity model in S/m (or resistivity model in Ohm m)
    air_conductivity = np.log(1e-8)
    background_conductivity = np.log(1e-2)

    active_map = maps.InjectActiveCells(mesh, ind_active, np.exp(air_conductivity))
    nC = int(ind_active.sum())

    conductivity_map = active_map * maps.ExpMap()

    # Define model
    starting_conductivity_model = background_conductivity * np.ones(nC)








.. GENERATED FROM PYTHON SOURCE LINES 253-258

Define the Physics of the DC Simulation
---------------------------------------

Here, we define the physics of the DC resistivity problem.


.. GENERATED FROM PYTHON SOURCE LINES 258-264

.. code-block:: Python


    # Define the problem. Define the cells below topography and the mapping
    simulation = dc.simulation_2d.Simulation2DNodal(
        mesh, survey=survey, sigmaMap=conductivity_map, storeJ=True
    )








.. GENERATED FROM PYTHON SOURCE LINES 265-275

Define DC Inverse Problem
-------------------------

The inverse problem is defined by 3 things:

    1) Data Misfit: a measure of how well our recovered model explains the field data
    2) Regularization: constraints placed on the recovered model and a priori information
    3) Optimization: the numerical approach used to solve the inverse problem



.. GENERATED FROM PYTHON SOURCE LINES 275-298

.. code-block:: Python


    # Define the data misfit. Here the data misfit is the L2 norm of the weighted
    # residual between the observed data and the data predicted for a given model.
    # Within the data misfit, the residual between predicted and observed data are
    # normalized by the data's standard deviation.
    dmis = data_misfit.L2DataMisfit(data=dc_data, simulation=simulation)

    # Define the regularization (model objective function)
    reg = regularization.WeightedLeastSquares(
        mesh,
        active_cells=ind_active,
        reference_model=starting_conductivity_model,
    )

    reg.reference_model_in_smooth = True  # Reference model in smoothness term

    # Define how the optimization problem is solved. Here we will use an
    # Inexact Gauss Newton approach.
    opt = optimization.InexactGaussNewton(maxIter=40)

    # Here we define the inverse problem that is to be solved
    inv_prob = inverse_problem.BaseInvProblem(dmis, reg, opt)








.. GENERATED FROM PYTHON SOURCE LINES 299-306

Define DC Inversion Directives
------------------------------

Here we define any directives that are carried out during the inversion. This
includes the cooling schedule for the trade-off parameter (beta), stopping
criteria for the inversion and saving inversion results at each iteration.


.. GENERATED FROM PYTHON SOURCE LINES 306-337

.. code-block:: Python


    # Apply and update sensitivity weighting as the model updates
    update_sensitivity_weighting = directives.UpdateSensitivityWeights()

    # Defining a starting value for the trade-off parameter (beta) between the data
    # misfit and the regularization.
    starting_beta = directives.BetaEstimate_ByEig(beta0_ratio=1e1)

    # Set the rate of reduction in trade-off parameter (beta) each time the
    # the inverse problem is solved. And set the number of Gauss-Newton iterations
    # for each trade-off paramter value.
    beta_schedule = directives.BetaSchedule(coolingFactor=3, coolingRate=2)

    # Options for outputting recovered models and predicted data for each beta.
    save_iteration = directives.SaveOutputEveryIteration(save_txt=False)

    # Setting a stopping criteria for the inversion.
    target_misfit = directives.TargetMisfit(chifact=1)

    # Update preconditioner
    update_jacobi = directives.UpdatePreconditioner()

    directives_list = [
        update_sensitivity_weighting,
        starting_beta,
        beta_schedule,
        save_iteration,
        target_misfit,
        update_jacobi,
    ]








.. GENERATED FROM PYTHON SOURCE LINES 338-344

Running the DC Inversion
------------------------

To define the inversion object, we need to define the inversion problem and
the set of directives. We can then run the inversion.


.. GENERATED FROM PYTHON SOURCE LINES 344-351

.. code-block:: Python


    # Here we combine the inverse problem and the set of directives
    dc_inversion = inversion.BaseInversion(inv_prob, directiveList=directives_list)

    # Run inversion
    recovered_conductivity_model = dc_inversion.run(starting_conductivity_model)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Running inversion with SimPEG v0.23.0
    /home/vsts/work/1/s/simpeg/simulation.py:197: DefaultSolverWarning:

    Using the default solver: Pardiso. 

    If you would like to suppress this notification, add 
    warnings.filterwarnings('ignore', simpeg.utils.solver_utils.DefaultSolverWarning)
     to your script.


                            simpeg.InvProblem is setting bfgsH0 to the inverse of the eval2Deriv.
                            ***Done using same Solver, and solver_opts as the Simulation2DNodal problem***
                        
    /usr/share/miniconda/envs/simpeg-test/lib/python3.10/site-packages/pymatsolver/solvers.py:415: FutureWarning:

    In Future pymatsolver v0.4.0, passing a vector of shape (n, 1) to the solve method will return an array with shape (n, 1), instead of always returning a flattened array. This is to be consistent with numpy.linalg.solve broadcasting.

    model has any nan: 0
    ============================ Inexact Gauss Newton ============================
      #     beta     phi_d     phi_m       f      |proj(x-g)-x|  LS    Comment   
    -----------------------------------------------------------------------------
    x0 has any nan: 0
       0  7.32e+01  3.42e+04  0.00e+00  3.42e+04    2.90e+03      0              
       1  7.32e+01  1.07e+04  1.06e+02  1.85e+04    2.60e+02      0              
       2  2.44e+01  1.15e+04  9.35e+01  1.38e+04    8.39e+02      0              
       3  2.44e+01  4.78e+03  2.58e+02  1.11e+04    9.55e+01      0              
       4  8.13e+00  5.12e+03  2.42e+02  7.09e+03    4.58e+02      0              
       5  8.13e+00  1.67e+03  4.83e+02  5.59e+03    6.24e+01      0              
       6  2.71e+00  1.70e+03  4.74e+02  2.99e+03    2.15e+02      0              
       7  2.71e+00  4.49e+02  7.25e+02  2.41e+03    2.15e+01      0              
       8  9.04e-01  4.49e+02  7.22e+02  1.10e+03    8.66e+01      0              
    ------------------------- STOP! -------------------------
    1 : |fc-fOld| = 0.0000e+00 <= tolF*(1+|f0|) = 3.4201e+03
    1 : |xc-x_last| = 1.0533e+01 <= tolX*(1+|x0|) = 8.2347e+01
    0 : |proj(x-g)-x|    = 8.6649e+01 <= tolG          = 1.0000e-01
    0 : |proj(x-g)-x|    = 8.6649e+01 <= 1e3*eps       = 1.0000e-02
    0 : maxIter   =      40    <= iter          =      9
    ------------------------- DONE! -------------------------




.. GENERATED FROM PYTHON SOURCE LINES 352-355

Recreate True Conductivity Model
--------------------------------


.. GENERATED FROM PYTHON SOURCE LINES 355-372

.. code-block:: Python


    true_background_conductivity = 1e-2
    true_conductor_conductivity = 1e-1
    true_resistor_conductivity = 1e-3

    true_conductivity_model = true_background_conductivity * np.ones(len(mesh))

    ind_conductor = model_builder.get_indices_sphere(
        np.r_[-120.0, -180.0], 60.0, mesh.gridCC
    )
    true_conductivity_model[ind_conductor] = true_conductor_conductivity

    ind_resistor = model_builder.get_indices_sphere(np.r_[120.0, -180.0], 60.0, mesh.gridCC)
    true_conductivity_model[ind_resistor] = true_resistor_conductivity

    true_conductivity_model[~ind_active] = np.nan








.. GENERATED FROM PYTHON SOURCE LINES 373-376

Plotting True and Recovered Conductivity Model
----------------------------------------------


.. GENERATED FROM PYTHON SOURCE LINES 376-419

.. code-block:: Python


    # Plot True Model
    norm = LogNorm(vmin=1e-3, vmax=1e-1)

    fig = plt.figure(figsize=(9, 4))
    ax1 = fig.add_axes([0.14, 0.17, 0.68, 0.7])
    im = mesh.plot_image(
        true_conductivity_model, ax=ax1, grid=False, pcolor_opts={"norm": norm}
    )
    ax1.set_xlim(-600, 600)
    ax1.set_ylim(-600, 0)
    ax1.set_title("True Conductivity Model")
    ax1.set_xlabel("x (m)")
    ax1.set_ylabel("z (m)")

    ax2 = fig.add_axes([0.84, 0.17, 0.03, 0.7])
    cbar = mpl.colorbar.ColorbarBase(ax2, norm=norm, orientation="vertical")
    cbar.set_label(r"$\sigma$ (S/m)", rotation=270, labelpad=15, size=12)

    plt.show()

    # # Plot Recovered Model
    fig = plt.figure(figsize=(9, 4))

    recovered_conductivity = conductivity_map * recovered_conductivity_model
    recovered_conductivity[~ind_active] = np.nan

    ax1 = fig.add_axes([0.14, 0.17, 0.68, 0.7])
    mesh.plot_image(
        recovered_conductivity, normal="Y", ax=ax1, grid=False, pcolor_opts={"norm": norm}
    )
    ax1.set_xlim(-600, 600)
    ax1.set_ylim(-600, 0)
    ax1.set_title("Recovered Conductivity Model")
    ax1.set_xlabel("x (m)")
    ax1.set_ylabel("z (m)")

    ax2 = fig.add_axes([0.84, 0.17, 0.03, 0.7])
    cbar = mpl.colorbar.ColorbarBase(ax2, norm=norm, orientation="vertical")
    cbar.set_label(r"$\sigma$ (S/m)", rotation=270, labelpad=15, size=12)

    plt.show()




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /content/tutorials/05-dcr/images/sphx_glr_plot_inv_2_dcr2d_003.png
         :alt: True Conductivity Model
         :srcset: /content/tutorials/05-dcr/images/sphx_glr_plot_inv_2_dcr2d_003.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /content/tutorials/05-dcr/images/sphx_glr_plot_inv_2_dcr2d_004.png
         :alt: Recovered Conductivity Model
         :srcset: /content/tutorials/05-dcr/images/sphx_glr_plot_inv_2_dcr2d_004.png
         :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 420-423

Plotting Predicted DC Data and Misfit
-------------------------------------


.. GENERATED FROM PYTHON SOURCE LINES 423-458

.. code-block:: Python


    # Predicted data from recovered model
    dpred = inv_prob.dpred
    dobs = dc_data.dobs
    std = dc_data.standard_deviation

    # Plot
    fig = plt.figure(figsize=(9, 13))
    data_array = [np.abs(dobs), np.abs(dpred), (dobs - dpred) / std]
    plot_title = ["Observed Voltage", "Predicted Voltage", "Normalized Misfit"]
    plot_units = ["V/A", "V/A", ""]
    scale = ["log", "log", "linear"]

    ax1 = 3 * [None]
    cax1 = 3 * [None]
    cbar = 3 * [None]
    cplot = 3 * [None]

    for ii in range(0, 3):
        ax1[ii] = fig.add_axes([0.15, 0.72 - 0.33 * ii, 0.65, 0.21])
        cax1[ii] = fig.add_axes([0.81, 0.72 - 0.33 * ii, 0.03, 0.21])
        cplot[ii] = plot_pseudosection(
            survey,
            data_array[ii],
            "contourf",
            ax=ax1[ii],
            cax=cax1[ii],
            scale=scale[ii],
            cbar_label=plot_units[ii],
            mask_topography=True,
            contourf_opts={"levels": 25, "cmap": mpl.cm.viridis},
        )
        ax1[ii].set_title(plot_title[ii])

    plt.show()



.. image-sg:: /content/tutorials/05-dcr/images/sphx_glr_plot_inv_2_dcr2d_005.png
   :alt: Observed Voltage, Predicted Voltage, Normalized Misfit
   :srcset: /content/tutorials/05-dcr/images/sphx_glr_plot_inv_2_dcr2d_005.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (5 minutes 53.808 seconds)

**Estimated memory usage:**  295 MB


.. _sphx_glr_download_content_tutorials_05-dcr_plot_inv_2_dcr2d.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_inv_2_dcr2d.ipynb <plot_inv_2_dcr2d.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_inv_2_dcr2d.py <plot_inv_2_dcr2d.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_inv_2_dcr2d.zip <plot_inv_2_dcr2d.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
